[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-landclaim"
version = "0.2.0"
description = "Advanced land claim system for Endstone servers with economy integration"
requires-python = ">=3.10"
dependencies = [
    "ruamel.yaml>=0.17.0",
]

[project.entry-points."endstone"]
landclaim = "endstone_landclaim.plugin:LandClaimPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/endstone_landclaim"]