[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-landclaims"
version = "0.2.0"
description = "Advanced land claim system for Endstone servers with economy and clans integration"
requires-python = ">=3.12"
dependencies = [
    "ruamel.yaml>=0.17.0",
    "endstone-clans-api"
]

[project.entry-points."endstone"]
landclaims = "endstone_landclaims.plugin:LandClaimsPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/endstone_landclaims"]